--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,45 +41,54 @@
       <% end %>
     </div>
   <% end %>
-  <h3>Conversations you're following:</h3>
-  <div class="comments">
-    <ul class="list-group list-group-flush" id="list-group-comments">
-      <% @all.each do |comment| %>
-        <% if @replies.include? comment %>
-          <%= render :partial => 'comments/comment_reply', locals: {comment: comment} %>
-        <% elsif @post_comments.include? comment %>
-          <%= render :partial => 'comments/comment_on_post', locals: {comment: comment} %>
-        <% else %>
-          <%= render :partial => 'comments/comment_following', locals: {comment: comment} %>
-        <% end %>
-      <% end %>
+  <!-- Classic tabs -->
+  <div class="classic-tabs mb-4">
+    <ul class="nav" id="myClassicTab" role="tablist">
+      <li class="nav-item tab-custom">
+        <a class="tab-custom active show" id="drafts-tab-classic" data-toggle="tab" href="#drafts-classic"
+          role="tab" aria-controls="drafts-classic" aria-selected="true">Drafts Needing Feedback</a>
+      </li>
+      <li class="nav-item tab-custom">
+        <a class="tab-custom" id="conversations-tab-classic" data-toggle="tab" href="#conversations-classic" role="tab"
+          aria-controls="conversations-classic" aria-selected="false">Your Conversations</a>
+      </li>
     </ul>
-    <% if @all.count.eql? 0 %>
-      <p><i>You aren't following any conversations. Comment on some articles to get involved in the community.</i></p>
-    <% end %>
   </div>
-  <h3>Drafts looking for peer feedback:</h3>
-  <div class="flex-wrapper flex-drafts">
-    <% @shared_drafts.each do |draft| %>
-      <% @featured = draft.promoting_until.present? && draft.promoting_until > Time.now %>
-      <% @color = @featured ? "#FA8075" : "#91A0BA" %>
-      <a href="<%= post_path(draft)%>">
-        <div class="card" style="width: 32%; <% if @unseen_shared_drafts.to_a.include? draft %>background-color: #E6F6FF;<% end %>">
-          <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
-          <div class="card-body">
-            <p class="card-text"><%= link_to(draft.user.try(:full_name), draft.user) %> is asking for peer feedback on <%= link_to draft.title, draft %></p>
-            <% if @featured %>
-              <p class="card-text"><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> This draft is being promoted. All feedback given will be rewarded twice as many points.</p>
-            <% end %>
-          </div>
-          <div class="rounded-bottom lighten-3 text-left p-3" style="background-color: <%= @color %>">
-            <p class="list-inline-item pr-2 white-text"><%= link_to("Give Feedback", post_path(draft), style: "color: white !important;")%></p>
-            <p class="list-inline-item pr-2 white-text">
-              <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comments" class="mb-1 svg-inline--fa fa-comments fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M416 192c0-88.4-93.1-160-208-160S0 103.6 0 192c0 34.3 14.1 65.9 38 92-13.4 30.2-35.5 54.2-35.8 54.5-2.2 2.3-2.8 5.7-1.5 8.7S4.8 352 8 352c36.6 0 66.9-12.3 88.7-25 32.2 15.7 70.3 25 111.3 25 114.9 0 208-71.6 208-160zm122 220c23.9-26 38-57.7 38-92 0-66.9-53.5-124.2-129.3-148.1.9 6.6 1.3 13.3 1.3 20.1 0 105.9-107.7 192-240 192-10.8 0-21.3-.8-31.7-1.9C207.8 439.6 281.8 480 368 480c41 0 79.1-9.2 111.3-25 21.8 12.7 52.1 25 88.7 25 3.2 0 6.1-1.9 7.3-4.8 1.3-2.9.7-6.3-1.5-8.7-.3-.3-22.4-24.2-35.8-54.5z"></path></svg> <%= draft.comments.count %> comments</p>
+  <!-- Classic tabs -->
+  <div class="tab-content p-0" id="myClassicTabContent">
+    <div class="tab-pane fade active show" id="drafts-classic" role="tabpanel" aria-labelledby="draftstab-classic">
+      <div class="flex-wrapper flex-drafts">
+        <% @shared_drafts.each do |draft| %>
+          <% @featured = draft.promoting_until.present? && draft.promoting_until > Time.now %>
+          <% @color = @featured ? "#FA8075" : "#91A0BA" %>
+          <a href="<%= post_path(draft)%>">
+            <div class="card" style="width: 32%; <% if @unseen_shared_drafts.to_a.include? draft %>background-color: #E6F6FF;<% end %>">
+              <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
+              <div class="card-body">
+                <p class="card-text"><%= link_to(draft.user.try(:full_name), draft.user) %> is asking for peer feedback on <%= link_to draft.title, draft %></p>
+                <% if @featured %>
+                  <p class="card-text"><svg width="14px" height="14px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg> This draft is being promoted. All feedback given will be rewarded twice as many points.</p>
+                <% end %>
+              </div>
+              <div class="rounded-bottom lighten-3 text-left p-3" style="background-color: <%= @color %>">
+                <p class="list-inline-item pr-2 white-text"><%= link_to("Give Feedback", post_path(draft), style: "color: white !important;")%></p>
+                <p class="list-inline-item pr-2 white-text">
+                  <svg width="20px" height="20px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comments" class="mb-1 svg-inline--fa fa-comments fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M416 192c0-88.4-93.1-160-208-160S0 103.6 0 192c0 34.3 14.1 65.9 38 92-13.4 30.2-35.5 54.2-35.8 54.5-2.2 2.3-2.8 5.7-1.5 8.7S4.8 352 8 352c36.6 0 66.9-12.3 88.7-25 32.2 15.7 70.3 25 111.3 25 114.9 0 208-71.6 208-160zm122 220c23.9-26 38-57.7 38-92 0-66.9-53.5-124.2-129.3-148.1.9 6.6 1.3 13.3 1.3 20.1 0 105.9-107.7 192-240 192-10.8 0-21.3-.8-31.7-1.9C207.8 439.6 281.8 480 368 480c41 0 79.1-9.2 111.3-25 21.8 12.7 52.1 25 88.7 25 3.2 0 6.1-1.9 7.3-4.8 1.3-2.9.7-6.3-1.5-8.7-.3-.3-22.4-24.2-35.8-54.5z"></path></svg> <%= draft.comments.count %> comments</p>
+              </div>
+            </div>
+          </a>
+        <% end %>
+      </div>
+      <%== pagy_nav(@pagy).html_safe %>
+    </div>
+    <div class="tab-pane fade" id="conversations-classic" role="tabpanel" aria-labelledby="conversations-tab-classic">
+      <%= render_async_cache get_conversations_following_path, toggle: { selector: '#conversations-tab-classic', event: :click } do %>
+        <div class="d-flex justify-content-center">
+          <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
           </div>
         </div>
-      </a>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-  <%== pagy_nav(@pagy).html_safe %>
 </div>
