--- a/app/views/reviews/_all_editor_activity.html.erb
+++ b/app/views/reviews/_all_editor_activity.html.erb
@@ -1,20 +1,6 @@
 <ul class="feed_wrapper mb-4 list-group list-group-flush mb-3" id="list-group-comments">
-  <% @editor_activity.each do |activity| %>
-    <li class="list-group-item comment" id="comment_<%=activity.id %>">
-      <% @profile_img = activity.user.try(:profile)&.exists? ? image_tag(activity.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
-      <%= link_to(@profile_img, activity.user, target: "_blank") %>
-      <div class="li-content ml-3">
-        <span>
-          <%= link_to activity.user.try(:full_name), "/editors/#{activity.user.slug}", class: "link_nrml", target: "_blank" %> <%= markdown activity.action %>
-          <%= time_ago_in_words(activity.action_at) %> ago.
-          <% if current_user.admin %>
-            <%= mail_to activity.user.try(:email), subject: "Your editor activity on The Teen Magazine", body: "Responding to #{activity.user.try(:full_name)} #{activity.action.gsub(/<\/?[^>]*>/, "")}:", target: "_blank" do %>
-              <svg width="10px" height="10px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path></svg>
-            <% end %>
-          <% end %>
-        </span>
-      </div>
-    </li>
-  <% end %>
+  <%= render partial: 'reviews/editor_activity/editor_activity_page' %>
 </ul>
-<%== pagy_nav(@pagy).html_safe %>
+<div id="div_next_link">
+  <%= render partial: 'reviews/editor_activity/next_link' %>
+</div>
