--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,9 @@
       <%= render "layouts/partials/slide-in-menu" %>
       <%= render "layouts/partials/header-mobile" %>
       <div id="site-canvas">
-        <!-- <div class="banner_stts_relative">
-<<<<<<< HEAD
-          <p class= "banner_stts" style="background-color: black;"><span style="font-family: 'Griffy', cursive;">All Treats, No Tricks: </span> Get in the <span style="font-family: 'Griffy', cursive;">Spirit of Halloween</span> <i class="fas fa-ghost"></i> by grabbing your FREE copy of The Teen Magazine's October issue <a target="_blank" class="link_white" href="/subscribe">here</a>!</p>
-=======
-          <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's September 2020 issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
->>>>>>> b3412bcbdaef7bed91dd0ae024fd9e21814e28a0
-        </div> -->
+        <div class="banner_stts_relative">
+          <p class= "banner_stts" style="background-color: #DC0C2B;">The Teen Magazine's December 2020 issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
+        </div>
         <div class="bodywrapper">
           <% if notice %>
             <p class="notice"><%= notice %></p>
