--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -20,10 +20,10 @@
   <h4><i>Enter your email to receive this month's magazine issue:</i></h4>
 
 <!--End mc_embed_signup-->
-  <%= form_for(:pages, url:"/october_2020_MCDVRcgNpmrhXWo") do |f| %>
+  <%= form_for(:pages, url:"/december_2020_MCDVRcgNpmrhXWo") do |f| %>
     <%= f.text_field :email, placeholder: "Email Address", :style => "margin-bottom: 10px;", required: true %>
     <%= f.check_box :sub, :checked => true %>
-    <span>Subscribe to The Teen Magazine newsletter & receive all future monthly issues. We value your privacy and will never sell your info or spam your inbox. We only notify you of our best content and our monthly issues. Unsubscribe anytime.</span>
+    <span>Subscribe to The Teen Magazine newsletter and receive all future monthly issues. We value your privacy and will never sell your info or spam your inbox. Unsubscribe anytime.</span>
     <br>
     <br>
     <%= f.submit "Get December Issue", class: "submit_btn" %>
