--- a/app/views/pages/issue.html.erb
+++ b/app/views/pages/issue.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper">
-  <h1 class="title">You've just received access to The Teen Magazine's Decemberissue!</h1>
+  <h1 class="title">You've just received access to The Teen Magazine's December Issue!</h1>
   <p><a target="_blank" class="link_grn" href="https://s3.amazonaws.com/media.theteenmagazine.com/December_2020_Issue.pdf">View pdf in new tab.</a></p>
   <iframe src="https://s3.amazonaws.com/media.theteenmagazine.com/December_2020_Issue.pdf" width="100%" height="1200" style="border: none;"> </iframe>
   <br/>
