--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -208,3 +208,9 @@
     serviceId: "<%= @service_id %>"
   };
 </script>
+
+<style>
+  #cke_1_top .cke_button_icon {
+    background-image: url('https://www.theteenmagazine.com/assets/ckeditor/skins/moono-lisa/icons_hidpi.png?ezimgfmt=rs%3Adevice%2Frscb9-1%2Fng%3A') !important;
+  }
+</style>
