--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -211,6 +211,6 @@
 
 <style>
   #cke_1_top .cke_button_icon {
-    background-image: url('https://www.theteenmagazine.com/assets/ckeditor/skins/moono-lisa/icons_hidpi.png?ezimgfmt=rs%3Adevice%2Frscb9-1%2Fng%3A') !important;
+    background-image: url('<%= request.base_url %>/assets/ckeditor/skins/moono-lisa/icons_hidpi.png') !important;
   }
 </style>
